sfdx-source/force-app/main/default/objects/Mx_Tag_Association__c/Mx_Tag_Association__c.object-meta.xml
<CustomObject>
    <description>LEM-14102: It is a junction object between Mx Tag and other objects.</description>
    <label>Mx Tag Association</label>
    <nameField>
        <displayFormat>[TAG-{0000}]</displayFormat>
        <label>Mx Tag Association Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mx Tags Association</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>