sfdx-source/force-app/main/default/objects/Mx_Tag_Association__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-14102: It associates Mx Tag Association records with Account.</description>
    <complianceGroup>GDPR</complianceGroup>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Store</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mx Tags Association</relationshipLabel>
    <relationshipName>Mx_Tags_Association</relationshipName>
    <type>Lookup</type>
</CustomField>