sfdx-source/force-app/main/default/objects/Mx_Tag_Association__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>LEM-14103: It stores description of the Mx Tag.</description>
    <formula>MxTag__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>