sfdx-source/force-app/main/default/objects/Mx_Tag_Association__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14987: It is used to populate the most recent date that the Mx Tag association became Inactive.</description>
    <inlineHelpText>Indicates the most recent date that the Mx Tag association became Inactive.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>