sfdx-source/force-app/main/default/objects/Mx_Tag_Association__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-14102: It associates Mx Tag Association records with Lead.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Mx Tags Association</relationshipLabel>
    <relationshipName>Mx_Tags_Association</relationshipName>
    <type>Lookup</type>
</CustomField>