sfdx-source/force-app/main/default/objects/Mx_Tag_Association__c/fields/MxTag__c.field-meta.xml
<CustomField>
    <fullName>MxTag__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-14102, LEM-16913: It associates Mx Tag Association records with Mx Tag.</description>
    <label>Mx Tag</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MxTag__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MxTag__c</referenceTo>
    <relationshipLabel>Mx Tags Association</relationshipLabel>
    <relationshipName>Mx_Tags_Association</relationshipName>
    <type>Lookup</type>
</CustomField>