sfdx-source/force-app/main/default/objects/Mx_Tag_Association__c/fields/MxTagAssociation_Status__c.field-meta.xml
<CustomField>
    <fullName>MxTagAssociation_Status__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14987: It is used to represent the status of the the Mx Tag Association.</description>
    <inlineHelpText>Indicates the status of the the Mx Tag Association.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>