sfdx-source/force-app/main/default/objects/Mx_Tag_Association__c/fields/MxTagName__c.field-meta.xml
<CustomField>
    <fullName>MxTagName__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14105: It stores the name of the associated Mx Tag.</description>
    <formula>MxTag__r.Name</formula>
    <label>Mx Tag Name</label>
    <type>Text</type>
</CustomField>