sfdx-source/force-app/main/default/objects/Mx_Tag_Association__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14102: It displays the Name of the Mx Tag as a hyperlink.</description>
    <formula>HYPERLINK(LEFT($Api.Enterprise_Server_URL_540, FIND($CustomMetadata.Static_Configurations__mdt.Enterprise_Server_URL_Search_Key.Configuration_Value__c, $Api.Enterprise_Server_URL_540, 0) - 1) + MxTag__c, MxTag__r.Name)</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>