sfdx-source/force-app/main/default/objects/Mx_Tag_Association__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>LEM-14102: It associates Mx Tag Association records with Opportunity.</description>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Mx Tags Association</relationshipLabel>
    <relationshipName>Mx_Tags_Association</relationshipName>
    <type>Lookup</type>
</CustomField>