sfdx-source/force-app/main/default/objects/Mx_Tag_Association__c/fields/Opportunity_Account__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Account__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-25211: It stores AccountId associated to the Opportunity.</description>
    <formula>Opportunity__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Opportuinty Account</label>
    <type>Text</type>
</CustomField>