sfdx-source/force-app/main/default/objects/Mx_Tag_Association__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <defaultValue>TODAY()</defaultValue>
    <description>LEM-14987: It is used to show the most recent date that the Mx Tag Association became active.</description>
    <inlineHelpText>Indicates the most recent date that the Mx Tag Association became active.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>