sfdx-source/force-app/main/default/objects/Mx_Tag_Association__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>LEM-14102: It stores status of the associated Mx Tag.</description>
    <complianceGroup>GDPR</complianceGroup>
    <formula>IF(
  NOT(ISBLANK(MxTag__r.Id)),
  IF(
  (TEXT(MxTag__r.Status__c)= $Label.Active),
  $Label.Active,
  IF(
  (TEXT(MxTag__r.Status__c)= $Label.Inactive),
  $Label.Inactive,
  null
  )
  ),
  &quot; &quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>